--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 
-<script src="/javascripts/application.js" type="text/javascript" charset="utf-8" async defer></script>
+<script src="script.js" type="text/javascript"></script>
 </body>
 </html>
